--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
                   </ul>
 				  <ul class="nav-social-icons navbar-nav">
 					<li class="nav-item">
-						<a href=""><i class="lni lni-instagram"></i></a>
+						<a href="https://www.instagram.com/socialwavepodcast/" target="_blank" rel="noopener noreferrer"><i class="lni lni-instagram"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href=""><i class="lni lni-youtube"></i></a>
+						<a href="https://www.youtube.com/@socialwavepodcast" target="_blank" rel="noopener noreferrer"><i class="lni lni-youtube"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href=""><i class="lni lni-facebook-fill"></i></a>
+						<a href="https://www.facebook.com/people/Social-Wave-Podcast/100091642155063/" target="_blank" rel="noopener noreferrer"><i class="lni lni-facebook-fill"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href=""><i class="lni lni-tiktok-alt"></i></a>
+						<a href="https://www.tiktok.com/@socialwavepodcast" target="_blank" rel="noopener noreferrer"><i class="lni lni-tiktok-alt"></i></a>
 					</li>
 					
 				  </ul>
@@ -454,7 +454,7 @@
 							<div class="footer-widget">
 								<div class="logo">
 									<img src="assets/img/logo/logo.svg" alt="">
-									© Copyright <script>document.write(new Date().getFullYear());</script>. All Rights Reserved
+									<p style="padding-bottom: 10px; font-size: 14px;">© Copyright <script>document.write(new Date().getFullYear());</script>. All Rights Reserved</p> 
 								</div>
 								
 							</div>
