--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Social Wave Podcast || Bringing faith-based conversations to the forefront</title>
     <meta name="description" content="Inspiring conversations that exhibit the message of the Gospel" />
-	<meta property="og:title" content="Social Wave Podcast" />
-	<meta property="og:image" content="https://socialwavepodcast.com/assets/img/hero/social-wave.svg" />
+	<meta property="og:image" content="https://socialwavepodcast.com/assets/img/hero/social-wave.png" />
 	<meta property="og:image:width" content="200">
 	<meta property="og:image:height" content="200">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/hero/social-wave.svg"/>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/hero/social-wave.png"/>
     <!-- Place favicon.ico in the root directory -->
 
     <!-- ========================= CSS here ========================= -->
