--- a/index.html
+++ b/index.html
@@ -72,15 +72,6 @@
                     <li class="nav-item">
                       <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <!-- <li class="nav-item">
-                      <a class="page-scroll" href="#service">Services</a>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                      <a class="" href="#0">Portfolio</a>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                      <a class="" href="#0">Pricing</a>
-                    </li> -->
                     <li class="nav-item">
                       <a class="" href="#podcast">Podcast</a>
                     </li>
@@ -286,7 +277,7 @@
 							</div>
 							<div class="content">
 								<h3>Christian Philpotts</h3>
-								<p>Lorem ipsum dolor sitsdw consetsad pscing eliewtr, diam nonumy.</p>
+								<p>Speak life in Jesus' name!</p>
 							</div>
 						</div>
 					</div>
