--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -114,8 +115,8 @@
         <div class="row align-items-center">
          
             <div class="hero-content">
-				<img src="./assets/img/hero/social-wave.svg" alt="social-wave" style="height: 450px;">
-				<h1 class="dynamic-text-shadow"> Inspiring conversations that exhibit the message of the Gospel</h1>
+				<img src="./assets/img/hero/social-wave.svg" alt="social-wave">
+				<h1 class="dynamic-text-shadow" style="letter-spacing: 2px;"> Inspiring conversations that exhibit the message of the Gospel</h1>
 				<div class="header">
 					
 
@@ -261,8 +262,8 @@
 									</path>
 								  </pattern>
 								</defs>
-								<text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="0.6">HOMIES</text>
-								<text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#gradient)" fill-opacity="0.3">HOMIES</text>
+								<text text-anchor="middle" x="50" y="15" font-size="17" letter-spacing="2" fill="url(#wave)"  fill-opacity="0.6">HOMIES</text>
+								<text text-anchor="middle" x="50" y="15" font-size="17" letter-spacing="2" fill="url(#gradient)" fill-opacity="0.3">HOMIES</text>
 							  </svg>
 							<p>A podcast that brings together 5 Christian men to discuss topics relevant to the church and culture in a lively and thought-provoking way. We seek to explore the intersection of faith and society, sharing our perspectives on issues that matter to us and our listeners. </p>
 						</div>
